# graphix-og-generator

./: .gitignore  README.md  pyproject.toml
graphix_og_generator/: graphix_og_generator.py  og_blocks.py  og_generator.py
graphix_og_generator.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_og_generator.py
